--- a/src/index.scss
+++ b/src/index.scss
@@ -127,6 +127,31 @@ body {
     }
   }
 
+  &[data-children="2"] {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+
+    & > .card:nth-child(1) {
+      grid-area: 1 / 1 / 2 / 2;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(2) {
+      grid-area: 2 / 1 / 3 / 2;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+  }
+
   &[data-children="3"] {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
