--- a/src/index.scss
+++ b/src/index.scss
@@ -184,6 +184,31 @@ body {
     }
   }
 
+  &[data-children="4"] {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    & > .card:nth-child(1) {
+      grid-area: 1 / 1 / 3 / 2;
+      height: var(--card-height-normal);
+    }
+
+    & > .card:nth-child(2) {
+      grid-area: 1 / 2 / 3 / 3;
+      height: var(--card-height-normal);
+    }
+
+    & > .card:nth-child(3) {
+      grid-area: 1 / 3 / 3 / 4;
+      height: var(--card-height-normal);
+    }
+
+    & > .card:nth-child(4) {
+      grid-area: 1 / 4 / 3 / 5;
+      height: var(--card-height-normal);
+    }
+  }
+
   &[data-children="5"] {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
