Add section titles

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   min-height: 100vh;
 
   font-family: "Roboto Condensed";
   font-size: 16px;
-
-  margin: 0;
+  color: #111827;
 
   background-color: #d1d5db;
 }
@@ -18,10 +22,21 @@ body {
   display: flex;
   flex-direction: column;
 
-  gap: 1rem;
+  row-gap: 2rem;
 
   padding: 2rem;
   margin: 0 auto;
+
+  & > .title {
+    font-size: 2.2rem;
+    line-height: 2.2rem;
+
+    transform: translateX(2rem);
+
+    &:not(:first-child) {
+      margin-top: 2rem;
+    }
+  }
 }
 
 .section {
