--- a/src/index.scss
+++ b/src/index.scss
@@ -342,6 +342,77 @@ body {
       }
     }
   }
+
+  &[data-children="7"] {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+
+    & > .card:nth-child(1) {
+      grid-area: 1 / 1 / 3 / 2;
+
+      height: var(--card-height-normal);
+    }
+
+    & > .card:nth-child(2) {
+      grid-area: 1 / 2 / 2 / 3;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(3) {
+      grid-area: 2 / 2 / 3 / 3;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(4) {
+      grid-area: 1 / 3 / 2 / 4;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(5) {
+      grid-area: 2 / 3 / 3 / 4;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(6) {
+      grid-area: 1 / 4 / 2 / 5;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+
+    & > .card:nth-child(7) {
+      grid-area: 2 / 4 / 3 / 5;
+
+      height: var(--card-height-small);
+
+      & .image {
+        background-size: contain;
+      }
+    }
+  }
 }
 
 .card {
