--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,12 @@
   initial-value: transparent;
 }
 
+@property --image-opacity {
+  syntax: "<number>";
+  inherits: true;
+  initial-value: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -109,13 +115,18 @@ body {
         padding: 0 0 0.5rem;
 
         transition: 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
-        transition-property: --darker-color, --lighter-color;
+        transition-property: --darker-color, --lighter-color, --image-opacity;
 
         &.small {
           --card-height: calc((28rem / 2) - 1rem);
 
           & > .image {
-            background-size: contain;
+            --gradient-shape: ellipse;
+
+            &,
+            &::before {
+              background-size: contain;
+            }
           }
         }
 
@@ -131,24 +142,55 @@ body {
           grid-column: span 2;
 
           & > .image {
-            background-size: 100%, 150%;
+            background-size: 150%;
+
+            &::before {
+              background-size: 100%;
+            }
           }
         }
 
         .image {
+          --gradient-shape: circle;
+
+          position: relative;
           overflow: hidden;
 
           height: var(--image-height);
           width: var(--image-width);
 
-          background-image: var(--image),
-            radial-gradient(var(--lighter-color), var(--darker-color));
-          background-size: 150%;
-          background-position: top center;
-          background-repeat: no-repeat;
+          background-image: radial-gradient(
+            var(--gradient-shape) at 20% 10%,
+            var(--lighter-color),
+            var(--darker-color)
+          );
           box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
 
           border-radius: 1rem;
+
+          &,
+          &::before {
+            background-size: 150%;
+            background-position: top center;
+            background-repeat: no-repeat;
+          }
+
+          &::before {
+            content: " ";
+            position: absolute;
+
+            width: 100%;
+            height: 100%;
+
+            background-image: var(--image);
+            background-size: 150%;
+
+            opacity: var(--image-opacity);
+            filter: drop-shadow(2.5px 2.5px 5px rgba(0, 0, 0, 0.1));
+
+            transition-delay: 0.3s;
+            transition-duration: 1s;
+          }
         }
 
         .name,
