--- a/src/index.scss
+++ b/src/index.scss
@@ -285,6 +285,28 @@ body {
 
             padding-left: 1.7rem;
             padding-top: 1px;
+
+            del {
+              position: relative;
+
+              text-decoration: none;
+
+              margin-right: 0.25rem;
+
+              &::after {
+                content: " ";
+
+                position: absolute;
+                left: 0;
+
+                width: 100%;
+                height: 2px;
+
+                background: #ef4444;
+
+                transform: scaleX(1.1) translate(1px, 0.7rem) rotate(-10deg);
+              }
+            }
           }
 
           .ago {
