Add a `box-shadow` to the cards

--- a/src/index.scss
+++ b/src/index.scss
@@ -113,6 +113,7 @@ body {
         border-radius: calc(1rem + 2px);
         background-color: white;
         border: 3px solid white;
+        box-shadow: 0 2px 5px #d1d5db;
 
         padding: 0 0 0.5rem;
 
