Add an initial value for `--image-lighter-step`
It seems that when using the `npm run build` files the initial value declared in `@property` is not used anymore.

--- a/src/index.scss
+++ b/src/index.scss
@@ -111,6 +111,8 @@ body {
         --darker-color: #6b7280;
         --lighter-color: #d1d5db;
 
+        --image-lighter-step: 0%;
+
         height: var(--card-height);
 
         display: flex;
