--- a/src/index.scss
+++ b/src/index.scss
@@ -111,7 +111,7 @@ body {
         --darker-color: #6b7280;
         --lighter-color: #d1d5db;
 
-        --image-lighter-step: 0%;
+        --image-lighter-step: -5%;
 
         height: var(--card-height);
 
@@ -126,11 +126,10 @@ body {
         padding: 0 0 0.5rem;
 
         transition: 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
-        transition-property: --darker-color, --lighter-color, --image-opacity,
-          --image-lighter-step;
+        transition-property: --image-lighter-step;
 
         &:hover {
-          --image-lighter-step: 10%;
+          --image-lighter-step: 5%;
         }
 
         &.small {
@@ -140,7 +139,7 @@ body {
             --gradient-shape: ellipse;
 
             &,
-            &::before {
+            & div {
               background-size: contain;
             }
           }
@@ -160,7 +159,7 @@ body {
           & > .image {
             background-size: 150%;
 
-            &::before {
+            & div {
               background-size: 100%;
             }
           }
@@ -176,7 +175,7 @@ body {
           width: var(--image-width);
 
           background-image: radial-gradient(
-            var(--gradient-shape) at 25% 0,
+            var(--gradient-shape) at 40% 40%,
             var(--lighter-color) var(--image-lighter-step),
             var(--darker-color)
           );
@@ -185,23 +184,21 @@ body {
           border-radius: 1rem;
 
           &,
-          &::before {
+          & div {
             background-size: 150%;
             background-position: top center;
             background-repeat: no-repeat;
           }
 
-          &::before {
+          & div {
             content: " ";
             position: absolute;
 
             width: 100%;
             height: 100%;
 
-            background-image: var(--image);
             background-size: 150%;
 
-            opacity: var(--image-opacity);
             filter: drop-shadow(2.5px 2.5px 5px rgba(0, 0, 0, 0.1));
 
             transition-delay: 0.3s;
